fix blurred session-modal

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -630,10 +630,6 @@ label {
 
 .session-modal {
   z-index: 150;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
   min-width: 300px;
 
   box-sizing: border-box;
